--- a/src/components/buttons/checkbox/checkbox.scss
+++ b/src/components/buttons/checkbox/checkbox.scss
@@ -1,5 +1,12 @@
 @import "@variables";
 
+.checkbox-buttons__container {
+  display: grid;
+  justify-items: start;
+  grid-template-rows: repeat(2, auto);
+  grid-gap: 10px;
+}
+
 .checkbox-button {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -66,11 +73,4 @@
       white-space: pre-wrap;
     }
   }
-}
-
-.checkbox-buttons__array {
-  display: grid;
-  justify-items: start;
-  grid-template-rows: repeat(2, auto);
-  grid-gap: 10px;
 }
