--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -5,7 +5,7 @@
     align-items: flex-end;
     justify-content: flex-start;
 
-    &_button {
+    &_hidden-input {
       position: absolute;
       left: -10px;
       bottom: -4px;
@@ -14,12 +14,8 @@
       height: 28px;
       cursor: pointer;
 
-      &:checked ~ .checkbox-list__title-button_icon {
-        animation: arrow-rotation 0.5s ease both;
-      }
-
-      &:not(:checked) ~ .checkbox-list__title-button_icon {
-        animation: arrow-rotation-back 0.5s ease both;
+      &:checked {
+        transform: rotateX(0.5turn);
       }
     }
 
@@ -29,14 +25,8 @@
       opacity: .5;
     }
   }
-}
 
-@keyframes arrow-rotation {
-  0%   { transform: rotateX(0turn) }
-  100% { transform: rotateX(0.5turn) }
-}
-
-@keyframes arrow-rotation-back {
-  0%   { transform: rotateX(0.5turn) }
-  100% { transform: rotateX(1turn) }
+  &_inserted {
+    display: none;
+  }
 }
