--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -231,7 +231,8 @@ body.ui-kit__body
         .block__checkbox-list_default
           +checkboxList({
             title: "expandable checkbox list",
-            groupname: "uik-fe__checkbox-list-default",
+            groupname: "uik-fe__checkbox-list_default",
+            inserted: true,
             checkboxes: [
               { pressed: false, label: "Завтрак" },
               { pressed: true,  label: "Письменный стол" },
@@ -241,7 +242,20 @@ body.ui-kit__body
               { pressed: false, label: "Шампунь" }
             ]
           })
-        .block__checkbox-list_ejected
+        .block__checkbox-list_ejected.indentation-double
+          +checkboxList({
+            title: "expandable checkbox list",
+            groupname: "uik-fe__checkbox-list_ejected",
+            inserted: false,
+            checkboxes: [
+              { pressed: false, label: "Завтрак" },
+              { pressed: true,  label: "Письменный стол" },
+              { pressed: true,  label: "Стул для кормления" },
+              { pressed: true,  label: "Кроватка" },
+              { pressed: false, label: "Телевизор" },
+              { pressed: false, label: "Шампунь" }
+            ]
+          })
       .form-elements__column_center
         .block__rich-checkbox-buttons
           +titleBar("rich checkbox buttons")
