--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -233,6 +233,7 @@ body.ui-kit__body
             title: "expandable checkbox list",
             groupname: "uik-fe__checkbox-list_default",
             inserted: true,
+            disabled: true,
             checkboxes: [
               { pressed: false, label: "Завтрак" },
               { pressed: true,  label: "Письменный стол" },
