--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -23,6 +23,10 @@
       position: relative;
       margin-left: 30px;
       opacity: .5;
+
+      & > label {
+        cursor: pointer;
+      }
     }
   }
 
