Added index page for github-pages implementation

--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -88,6 +88,13 @@
   }
 }
 
+.index-links {
+  display: grid;
+  grid-gap: 20px;
+  font-family: inherit;
+  margin-top: 80px;
+}
+
 .additional-padding {
   padding-top: 11px;
 }
