--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,8 +2,8 @@ body.ui-kit__body
   header
   main.ui-kit__main 
     .index-links
-      a(href="cards.html") cards 
-      a(href="colors-n-type.html") colors n type
+      a cards 
+      a(href="colors-n-type.html") colors & type
       a(href="form-elements.html") form elements 
-      a(href="headers-n-footers.html") headers n footers 
+      a headers & footers 
   footer
