Minor style fixes 2

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -243,7 +243,7 @@ body.ui-kit__body
               { pressed: false, label: "Шампунь" }
             ]
           })
-        .block__checkbox-list_ejected.indentation-double
+        .block__checkbox-list_ejected.indentation_double
           +checkboxList({
             title: "expandable checkbox list",
             groupname: "uik-fe__checkbox-list_ejected",
