--- a/src/components/buttons/checkbox/checkbox.scss
+++ b/src/components/buttons/checkbox/checkbox.scss
@@ -61,9 +61,9 @@
     width: 230px;
     
     &_title {
+      margin-block: 1px 7px;
       font-size: 14px;
       font-weight: bold;
-      margin-bottom: 5px;
       opacity: .75;
     }
 
