Minor style fixes 4

--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -4,5 +4,5 @@ mixin rangeSlider( item )
 
   .range-slider__wrap( class=widthClass )
     +titleBar( item.title, true, stateId )
-    .range-slider__wrap_container.additional-padding 
+    .range-slider__container.additional-padding 
       .range-slider__elem( id=item.id )
