Added new font, removed .otf fonts, refactored logo mixin

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,10 @@
 header.ui-kit__header {
-  height: 85px;
+  height: 140px;
   width: 100%;
-  padding: 30px;
+}
+
+.logotype {
+  position: fixed;
+  top: 30px;
+  left: 30px;
 }
