--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -2,4 +2,4 @@ include ../logo/logo.pug
 
 mixin header()
   header.ui-kit__header
-    +logotype({size: "48px", opacity: .25, color: "#1F2041"})
+    +logotype("monochrome")
