--- a/src/pages/headers-n-footers.pug
+++ b/src/pages/headers-n-footers.pug
@@ -1,6 +1,10 @@
-include ../components/header/ui-kit/header.pug
+include ../components/headers/ui-kit/header.pug
 
-block content
-  body.ui-kit__body
+body.ui-kit__body
+  header.ui-kit__header
     +header()
+  main.ui-kit__main
+    .headers-n-footers
+
+  footer.ui-kit__footer
     
