--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,8 +5,8 @@ body.ui-kit__body
     +header()
   main.ui-kit__main
     .index-links
-      a cards
+      a(href="cards.html") cards
       a(href="colors-n-type.html") colors & type
       a(href="form-elements.html") form elements
-      a headers & footers
+      a(href="headers-n-footers.html") headers & footers
   footer
