--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,9 +1,9 @@
-include ../components/headers/ui-kit/header.pug
+include ../components/headers/ui-kit/header-ui.pug
 
-body.ui-kit__body
+body
   header
-    +header()
-  main.ui-kit__main
+    +headerUI()
+  main
     .index-links
       a(href="cards.html") cards
       a(href="colors-n-type.html") colors & type
