--- a/src/pages/cards.pug
+++ b/src/pages/cards.pug
@@ -1,8 +1,8 @@
-include ../components/headers/ui-kit/header.pug
+include ../components/headers/ui-kit/header-ui.pug
 
 body.ui-kit__body
   header.ui-kit__header
-    +header()
+    +headerUI()
   main.ui-kit__main
     .headers-n-footers
 
