--- a/src/pages/colors-n-type.pug
+++ b/src/pages/colors-n-type.pug
@@ -1,10 +1,10 @@
-include ../components/headers/ui-kit/header.pug
+include ../components/headers/ui-kit/header-ui.pug
 include ../components/color-sample/color-sample.pug
 include ../components/type-sample/type-sample.pug
 
 body.ui-kit__body
   header.ui-kit__header
-    +header()
+    +headerUI()
   main.ui-kit__main
     +colorSamples([
       {hexcode: "#1F2041", opaque: "opaque_100", name: "valhalla", pseudoname: "Dark Shade 100%"},
