--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -1,4 +1,4 @@
-include ../components/headers/ui-kit/header.pug
+include ../components/headers/ui-kit/header-ui.pug
 include ../components/input/input.pug
 include ../components/advantage-bar/advantage-bar.pug
 include ../components/title-bar/title-bar.pug
@@ -17,7 +17,7 @@ include ../components/buttons/mean-oval/mean-oval.pug
 
 body.ui-kit__body
   header.ui-kit__header
-    +header()
+    +headerUI()
   main.ui-kit__main
     .form-elements__wrap_top.indentation_wrap
       .form-elements__column_left
