--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,12 +1,12 @@
 include ../components/headers/ui-kit/header-ui.pug
 
-body
-  header
+body.ui-kit__body
+  header.ui-kit__header
     +headerUI()
-  main
+  main.ui-kit__main
     .index-links
       a(href="cards.html") cards
       a(href="colors-n-type.html") colors & type
       a(href="form-elements.html") form elements
       a(href="headers-n-footers.html") headers & footers
-  footer
+  footer.ui-kit__footer
