header-landing, h-n-f page is under construction

--- a/src/components/headers/landing/header-landing.pug
+++ b/src/components/headers/landing/header-landing.pug
@@ -2,26 +2,28 @@ include ../../logo/logo.pug
 include ../../buttons/mean-oval/mean-oval.pug
 
 mixin headerLanding( item )
-  .landing-header
-    .landing-header__logo
-      +logotype('colorful')
-    .landing-header__nav
-    case item.authorized 
-      when true
-        .landing-header__user-bar
-          span Юлий Цезарь
-      when false 
-        .landing-header__authorization-buttons
-          +meanOvalButtons([
-            {
-              groupname: "landing-header__login-button",
-              type: "outlined",
-              text: "войти"
-            },
-            {
-              groupname: "landing-header__register-button",
-              type: "contained",
-              text: "зарегестрироваться",
-              widthbypercent: 75
-            }
-          ])
+  .header-landing
+    .header-landing__sections_left
+      .header-landing__logo
+        +logotype('colorful')
+    .header-landing__sections_right
+      .header-landing__nav
+      case item.authorized 
+        when true
+          .header-landing__user-bar
+            span Юлий Цезарь   
+        when false 
+          .header-landing__authorization-buttons
+            +meanOvalButtons([
+              {
+                groupname: "header-landing__login-button",
+                type: "outlined",
+                text: "войти"
+              },
+              {
+                groupname: "header-landing__register-button",
+                type: "contained",
+                text: "зарегестрироваться",
+                widthbypercent: 75
+              }
+            ])
