--- a/src/pages/headers-n-footers.pug
+++ b/src/pages/headers-n-footers.pug
@@ -1,7 +1,7 @@
 include ../components/headers/ui-kit/header-ui.pug
 include ../components/headers/landing/header-landing.pug
 
-body.ui-kit__body
+body.ui-kit__body.bgcolor_whisper
   header.ui-kit__header
     +headerUI()
   main.ui-kit__main
