--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -3,6 +3,7 @@ $perfume: #BC9CFF;
 $portage: #8BA4F9;
 $silver-tree: #6FCF97;
 $turquoise-blue: #66D2EA;
+$whisper: #E5E5E5;
 
 $primary-gradient: linear-gradient(180deg, $perfume 0%, $portage 100%);
 $secondary-gradient: linear-gradient(180deg, $silver-tree 0%, $turquoise-blue 100%);
