--- a/src/pages/headers-n-footers.pug
+++ b/src/pages/headers-n-footers.pug
@@ -4,7 +4,7 @@ include ../components/headers/landing/header-landing.pug
 body.ui-kit__body.bgcolor_whisper
   header.ui-kit__header
     +headerUI()
-  main.ui-kit__main
+  main
     .headers-n-footers
       +headerLanding({ authorized: false })
       +headerLanding({ authorized: true })
