--- a/src/components/headers/landing/header-landing.scss
+++ b/src/components/headers/landing/header-landing.scss
@@ -1,3 +1,5 @@
+@import "@variables";
+
 .header-landing {
   display: flex;
   align-items: center;
@@ -5,6 +7,7 @@
   width: 100%;
   height: 70px;
   padding-inline: 140px;
+  background-color: white;
 
   &__logo {
     
@@ -15,11 +18,22 @@
   }
 
   &__user-bar {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    border-left: 1px solid rgba($valhalla, .1);
+    padding-left: 20px;
 
+    &_full-name {
+      color: rgba($valhalla, .5);
+    }
   }
 
   &__authorization-buttons {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 20px;
     align-items: center;
+
   }
 }
