--- a/src/components/navigation-links/link/link.pug
+++ b/src/components/navigation-links/link/link.pug
@@ -5,7 +5,7 @@ mixin link( item )
 
   .link
     a.link__elem( class=styleClass href=item.href ) #{item.name}
-    if item.iconname
+    if item.icon
       .link__icon
-        +materialIcon( item.iconname )
+        +materialIcon('expand_more')
       
