Navigation-links and link mixins is under construction 3

--- a/src/components/navigation-links/link/link.scss
+++ b/src/components/navigation-links/link/link.scss
@@ -1,9 +1,16 @@
+@import "@variables";
+
 .link {
   display: flex;
-  
-  &__elem {
-    &_bold {
+  color: rgba($valhalla, .5);
 
+  &__elem {
+    text-decoration: none;
+    color: inherit;
+
+    &_bold {
+      font-weight: bold;
+      color: rgba($valhalla, .75);
     }
   }
 
