Ui-kit-pages stylesheet and header-n-footer width changes

--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -3,6 +3,7 @@
 .ui-kit {
   &__body {
     margin: auto;
+    width: 1440px;
     font-family: Montserrat, Quicksand, sans-serif;
     user-select: none;
   }
