--- a/src/pages/headers-n-footers.pug
+++ b/src/pages/headers-n-footers.pug
@@ -1,5 +1,6 @@
 include ../components/headers/ui-kit/header-ui.pug
 include ../components/headers/landing/header-landing.pug
+include ../components/footer/footer.pug
 
 body.ui-kit__body.bgcolor_whisper
   header.ui-kit__header
@@ -8,7 +9,7 @@ body.ui-kit__body.bgcolor_whisper
     .headers-n-footers
       +headerLanding({ authorized: false })
       +headerLanding({ authorized: true })
-
+      +footer()
 
   footer.ui-kit__footer
     
