--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -16,13 +16,24 @@
 
     &_content {
       display: grid;
-      grid-template-columns: repeat(5, 150px);
-      grid-gap: 50px;
+      grid-template-columns: 260px repeat(3, 150px) 260px;
+      grid-gap: 40px;
       height: 170px;
     }
   }
 
   &__lower-section {
     height: 70px;
+  }
+
+  &__common-text {
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba($valhalla, .75)
+  }
+
+  &__content-container {
+    display: grid;
+    grid-gap: 20px;
   }
 }
